--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <button id="pause-btn">Pause</button>
                 <input type="range" id="volume-control" min="0" max="100" value="50">
             </div>
-            <img src="music-box.png" alt="Music Box" id="music-box-img">
-            <img src="old-man.png" alt="Old Man" id="old-man-img">
+            <img src="Jpegmusicbox.jpeg" alt="Music Box" id="music-box-img">
+            <img src="full_body_shot.png" alt="Old Man" id="old-man-img">
         </section>
     </main>
 
     <footer>
-        <p>Contact us at <a href="mailto:contact@enchantedmusicbox.com">contact@enchantedmusicbox.com</a></p>
+        <p>Contact us at <a href="mailto:ndreamer@netvision.net.il">Ndreamer@netvision.net.il</a></p>
     </footer>
 
     <script src="script.js"></script>
